# JARVIS

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat  setup.bat
jarvis/: __init__.py  __main__.py  app.py  cli.py  dashboard.py  scheduler.py  voice.py
jarvis/agents/: __init__.py  specs.py  team.py
jarvis/core/: __init__.py  agent.py  config.py  longterm.py  memory.py  prompts.py
jarvis/integrations/: __init__.py  factory.py
jarvis/integrations/desktop/: __init__.py  desktop_app.py
jarvis/integrations/web/: __init__.py  browser.py  chatgpt_web.py  gemini_web.py
jarvis/providers/: __init__.py  base.py  openai_compatible.py  registry.py  router.py
jarvis/tools/: __init__.py  agent_tools.py  ai_delegate.py  apps.py  base.py  documents.py  filesystem.py  memory_tools.py  pc_control.py  registry.py  scheduler_tools.py  shell.py  system_info.py  vision.py
jarvis/utils/: __init__.py  logging.py  safety.py
tests/: test_documents.py  test_features.py  test_safety_and_filesystem.py  test_scheduler.py  test_smoke.py  test_team.py
