[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-assistant"
version = "0.1.0"
description = "A multi-provider AI assistant that can control your PC and delegate to other models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
pc = ["pyautogui>=0.9.54", "pygetwindow>=0.0.9", "psutil>=5.9", "pyperclip>=1.8"]
web = ["playwright>=1.42"]
all = [
    "pyautogui>=0.9.54", "pygetwindow>=0.0.9", "psutil>=5.9", "pyperclip>=1.8",
    "playwright>=1.42",
]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
